// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PDF RubricTable Rubric Table 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
          <th>
            Exemplar
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did not do the problem",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "x = _",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student tried to do the problem, but got it wrong",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "x = 10 + 5 = 15<br/>x = 10 - 5 = a million",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did the problem correctly",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "x = 10 - 5 = 5",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots PDF RubricTable Rubric Table: ESN 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">Una respuesta:</p><p style=\\"\\">• Proporciona evidencia suficiente de la capacidad para determinar / resumir el tema / idea central / mensaje, o para resumir lo que sucede después o durante un evento clave</p><p style=\\"\\">• Incluye ejemplos / detalles específicos que hacen referencia clara al texto</p><p style=\\"\\">• Explica adecuadamente el tema / idea central / mensaje o resumen con información claramente relevante basada en el texto</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">Una respuesta:</p><p style=\\"\\">• Proporciona evidencia limitada de la capacidad de determinar / resumir el tema / idea central / mensaje, o resumir lo que sucede después o durante un evento clave</p><p style=\\"\\">• Incluye ejemplos / detalles vagos / limitados que hacen referencia al texto</p><p style=\\"\\">• Explica el tema / idea central / mensaje o resumen con información vaga / limitada basada en el texto</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">Una respuesta:</p><p style=\\"\\">• No proporciona evidencia de la capacidad para determinar / resumir el tema / idea central / mensaje, o para resumir lo que sucede después o durante un evento clave</p><p style=\\"\\">OR</p><p style=\\"\\">• Da el tema / idea central / mensaje o resumen, pero no incluye ejemplos ni ejemplos / detalles que hagan referencia al texto</p><p style=\\"\\">OR</p><p style=\\"\\">• Da el tema / idea central / mensaje o resumen, pero no incluye ninguna explicación o información relevante del texto</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots PDF RubricTable Rubric Table: multiple 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">A response:</p><p style=\\"\\">• Gives sufficient evidence of the ability to determine/summarize the theme/central idea/message, or to summarize what happens after or during a key event</p><p style=\\"\\">• Includes specific examples/details that make clear reference to the text</p><p style=\\"\\">• Adequately explains the theme/central idea/message or summary with clearly relevant information based on the text</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">A response:</p><p style=\\"\\">• Gives limited evidence of the ability to determine/summarize the theme/central idea/message, or to summarize what happens after or during a key event</p><p style=\\"\\">• Includes vague/limited examples/details that make reference to the text</p><p style=\\"\\">• Explains the theme/central idea/message or summary with vague/limited information based on the text</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">A response:</p><p style=\\"\\">• Gives no evidence of the ability to determine/summarize the theme/central idea/message, or to summarize what happens after or during a key event</p><p style=\\"\\">OR</p><p style=\\"\\">• Gives the theme/central idea/message or summary, but includes no examples or no examples/details that make reference to the text</p><p style=\\"\\">OR</p><p style=\\"\\">• Gives the theme/central idea/message or summary, but includes no explanation or no relevant information from the text</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">Una respuesta:</p><p style=\\"\\">• Proporciona evidencia suficiente de la capacidad para determinar / resumir el tema / idea central / mensaje, o para resumir lo que sucede después o durante un evento clave</p><p style=\\"\\">• Incluye ejemplos / detalles específicos que hacen referencia clara al texto</p><p style=\\"\\">• Explica adecuadamente el tema / idea central / mensaje o resumen con información claramente relevante basada en el texto</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">Una respuesta:</p><p style=\\"\\">• Proporciona evidencia limitada de la capacidad de determinar / resumir el tema / idea central / mensaje, o resumir lo que sucede después o durante un evento clave</p><p style=\\"\\">• Incluye ejemplos / detalles vagos / limitados que hacen referencia al texto</p><p style=\\"\\">• Explica el tema / idea central / mensaje o resumen con información vaga / limitada basada en el texto</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">Una respuesta:</p><p style=\\"\\">• No proporciona evidencia de la capacidad para determinar / resumir el tema / idea central / mensaje, o para resumir lo que sucede después o durante un evento clave</p><p style=\\"\\">OR</p><p style=\\"\\">• Da el tema / idea central / mensaje o resumen, pero no incluye ejemplos ni ejemplos / detalles que hagan referencia al texto</p><p style=\\"\\">OR</p><p style=\\"\\">• Da el tema / idea central / mensaje o resumen, pero no incluye ninguna explicación o información relevante del texto</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots PDF RubricTable Rubric Table: no Samples 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">A response:</p><p style=\\"\\">• Gives sufficient evidence of the ability to determine/summarize the theme/central idea/message, or to summarize what happens after or during a key event</p><p style=\\"\\">• Includes specific examples/details that make clear reference to the text</p><p style=\\"\\">• Adequately explains the theme/central idea/message or summary with clearly relevant information based on the text</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">A response:</p><p style=\\"\\">• Gives limited evidence of the ability to determine/summarize the theme/central idea/message, or to summarize what happens after or during a key event</p><p style=\\"\\">• Includes vague/limited examples/details that make reference to the text</p><p style=\\"\\">• Explains the theme/central idea/message or summary with vague/limited information based on the text</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p style=\\"\\">A response:</p><p style=\\"\\">• Gives no evidence of the ability to determine/summarize the theme/central idea/message, or to summarize what happens after or during a key event</p><p style=\\"\\">OR</p><p style=\\"\\">• Gives the theme/central idea/message or summary, but includes no examples or no examples/details that make reference to the text</p><p style=\\"\\">OR</p><p style=\\"\\">• Gives the theme/central idea/message or summary, but includes no explanation or no relevant information from the text</p>",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
